# kraytour

./: .gitignore  README.md  api.json  docker-compose.yml  index.html  package-lock.json  package.json  postcss.config.js  test_api.sh  vite.config.ts
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 04ac2b62b6e8_initial.py  39d632efabd7_merge_migration_branches.py  6b8025cd418e_create_users_table.py  a1b2c3d4e5f6_create_locations_and_tags.py  a2b3c4d5e6f7_create_posts_table.py  a39af2b753a0_create_users_table.py  fc51680e510a_add_is_email_verified_and_avatar_to_.py
backend/app/: exceptions.py  main.py  seed.py
backend/app/api/v1/: auth.py  files.py  locations.py  posts.py  router.py
backend/app/core/: config.py  dependencies.py  enums.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  location.py  post.py  user.py
backend/app/schemas/: auth.py  location.py  post.py
backend/app/services/: location_service.py  minio_service.py  post_service.py
client/: index.html  tsconfig.app.json
client/src/: App.tsx  vite-env.d.ts
client/src/components/: YandexMap.tsx
src/app/: App.tsx
src/app/routing/: Router.tsx
src/app/styles/: normalize.scss  utils.scss
src/app/styles/helpers/: constants.scss  functions.scss  media.scss  mixins.scss
src/widgets/footer/: Footer.tsx
src/widgets/header/: Header.tsx
